// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders children props 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#4F6D7A",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <View />
</RCTSafeAreaView>
`;

exports[`uses the specified backgroundColor if provided 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#4F6D7A",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;
